[package]
name = "meshcorrode"
version = "0.1.0"
edition = "2024"

[dependencies]
btleplug = "0.12.0"
bytes = "1.11.1"
futures = "0.3.32"
log = { version = "0.4.29", features = ["std"] }
num_enum = "0.7.6"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "sync"] }
uuid = { version = "1.22.0", features = ["v4"] }

[dev-dependencies]
env_logger = { version = "0.11.9", features = ["color"] }
